--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
     "packages": [
       "moroboxai-game-sdk",
-      "moroboxai-games/games/*",
+      "moroboxai-games/games/pixijs-template",
+      "moroboxai-games/games/pong",
+      "moroboxai-games/games/skeleton",
+      "moroboxai-games/games/towerdefense",
       "moroboxai-player-sdk",
-      "moroboxai-player-web"
+      "moroboxai-player-web",
+      "moroboxai-player-react"
     ],
     "version": "0.0.0"
   }
