--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
       "moroboxai-games/games/towerdefense",
       "moroboxai-player-sdk",
       "moroboxai-player-web",
+      "moroboxai-player-web/playground",
       "moroboxai-player-react"
     ],
     "version": "0.0.0"
