--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [
-    "moroboxai-game-sdk",
-    "moroboxai-games/games/pixijs-template",
-    "moroboxai-games/games/pong",
-    "moroboxai-games/games/skeleton",
-    "moroboxai-games/games/towerdefense",
-    "moroboxai-player-sdk",
-    "moroboxai-player-web",
-    "moroboxai-player-web/playground",
-    "moroboxai-player-react"
-  ],
+  "workspaces": {
+    "packages": [
+      "moroboxai-game-sdk",
+      "moroboxai-games/games/pixijs-template",
+      "moroboxai-games/games/pong",
+      "moroboxai-games/games/skeleton",
+      "moroboxai-games/games/towerdefense",
+      "moroboxai-player-sdk",
+      "moroboxai-player-web",
+      "moroboxai-player-web/playground",
+      "moroboxai-player-react"
+    ],
+    "nohoist": [
+      "**/moroboxai-player-web",
+      "**/moroboxai-player-web/**",
+      "**/pixi.js",
+      "**/pixi.js/**"
+    ]
+  },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --force-local",
