--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,12 @@
 [submodule "moroboxai-player-react"]
 	path = moroboxai-player-react
 	url = https://github.com/moroboxai/moroboxai-player-react.git
+[submodule "moroboxai-editor-sdk"]
+	path = moroboxai-editor-sdk
+	url = https://github.com/moroboxai/moroboxai-editor-sdk.git
+[submodule "moroboxai-editor-web"]
+	path = moroboxai-editor-web
+	url = https://github.com/moroboxai/moroboxai-editor-web.git
+[submodule "moroboxai-editor-react"]
+	path = moroboxai-editor-react
+	url = https://github.com/moroboxai/moroboxai-editor-react.git
