--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "moroboxai-editor-sdk",
       "moroboxai-editor-web",
       "moroboxai-editor-react",
+      "moroboxai-editor-react/playground",
       "moroboxai-player-sdk",
       "moroboxai-player-web",
       "moroboxai-player-react"
@@ -30,12 +31,13 @@
     "build-editor-sdk": "cd moroboxai-editor-sdk && npm run build",
     "build-editor-web": "cd moroboxai-editor-web && npm run build",
     "build-editor-react": "cd moroboxai-editor-react && npm run build",
-    "build-editor": "npm run build-editor-sdk && npm run build-editor-web",
+    "build-editor": "npm run build-editor-sdk && npm run build-editor-web && npm run build-editor-react",
     "build-player-sdk": "cd moroboxai-player-sdk && npm run build",
     "build-player-web": "cd moroboxai-player-web && npm run build",
     "build-player-react": "cd moroboxai-player-react && npm run build",
-    "build-player": "npm run build-player-sdk && npm run build-player-web",
+    "build-player": "npm run build-player-sdk && npm run build-player-web && npm run build-player-react",
     "build-pong": "cd moroboxai-games/games/pong && npm run build",
+    "build-all": "npm run build-game-sdk && npm run build-player && npm run build-editor",
     "dev-editor-web": "cd moroboxai-editor-web && npm run dev",
     "dev-editor-react": "cd moroboxai-editor-react/playground && npm run dev",
     "dev-editor": "npm run dev-editor-web",
