--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
     "moroboxai-game-sdk",
+    "moroboxai-lua-sdk",
     "moroboxai-games/games/pixijs-template",
     "moroboxai-games/games/pong",
     "moroboxai-games/games/skeleton",
@@ -11,7 +12,10 @@
     "moroboxai-editor-react/playground",
     "moroboxai-player-sdk",
     "moroboxai-player-web",
-    "moroboxai-player-react"
+    "moroboxai-player-react",
+    "moroxel8ai-sdk",
+    "moroxel8ai",
+    "moroboxai"
   ],
   "version": "independent",
   "npmClient": "yarn",
