--- a/lerna.json
+++ b/lerna.json
@@ -2,10 +2,6 @@
   "packages": [
     "moroboxai-game-sdk",
     "moroboxai-lua-sdk",
-    "moroboxai-games/games/pixijs-template",
-    "moroboxai-games/games/pong",
-    "moroboxai-games/games/skeleton",
-    "moroboxai-games/games/towerdefense",
     "moroboxai-editor-sdk",
     "moroboxai-editor-web",
     "moroboxai-editor-react",
@@ -15,7 +11,8 @@
     "moroboxai-player-react",
     "moroxel8ai-sdk",
     "moroxel8ai",
-    "moroboxai"
+    "moroboxai",
+    "moroboxai-studio"
   ],
   "version": "independent",
   "npmClient": "yarn",
